Grant officers endpoint (#185)
